Break user service into 3 & add minor changes