@@ -9,6 +9,8 @@ import java.util.List;
 import java.util.Objects;
 import nl.tudelft.sem.template.controllers.UserController;
 import nl.tudelft.sem.template.services.UserService;
+import nl.tudelft.sem.template.services.UserSetterService;
+import nl.tudelft.sem.template.services.UserTimeSlotService;
 import nl.tudelft.sem.template.shared.domain.Node;
 import nl.tudelft.sem.template.shared.domain.Position;
 import nl.tudelft.sem.template.shared.domain.TimeSlot;
@@ -19,7 +21,6 @@ import nl.tudelft.sem.template.shared.enums.Day;
 import nl.tudelft.sem.template.shared.enums.PositionName;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.springframework.data.util.Pair;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
@@ -29,6 +30,8 @@ public class UserControllerTest {
     public TestUserRepository repo;
     public UserService service;
     private UserController sut;
+    private UserTimeSlotService timeService;
+    private UserSetterService setterService;
 
     /**
      * Helper method to create list of positions.
@@ -61,7 +64,9 @@ public class UserControllerTest {
     public void setup() {
         this.repo = new TestUserRepository();
         this.service = new UserService(repo);
-        this.sut = new UserController(service);
+        this.timeService = new UserTimeSlotService(repo, service);
+        this.setterService = new UserSetterService(repo, service);
+        this.sut = new UserController(service, timeService, setterService);
     }
 
     @Test
@@ -137,7 +142,8 @@ public class UserControllerTest {
     public void testFailedAddSchedule() {
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
-        //assertEquals(sut.addRecurringTimeSlot(2L, Day.MONDAY, new Node(10, 14)).getStatusCode(), HttpStatus.BAD_REQUEST);
+        assertEquals(sut.addRecurringTimeSlot(2L, new TimeSlot(1, Day.MONDAY, new Node(10, 9))).getStatusCode(),
+            HttpStatus.BAD_REQUEST);
 
     }
 
@@ -258,7 +264,7 @@ public class UserControllerTest {
 
     @Test
     public void testAddNotifications() {
-        List<String> notifications = new ArrayList<>(Arrays.asList("A"));
+        List<String> notifications = new ArrayList<>(List.of("A"));
 
         User u = getUser("A", Certificate.B1);
         sut.registerNewUser(u);
